# UniPrac

./: README.md
universityPractic/: CMakeLists.txt  Time_Difficulty_Score.txt  a.out  main.cpp  queue  queue.cpp  queue.h  queue_adapter.cpp  queue_adapter.h  quickSort_exp.cpp  quicksort  selection_sort.cpp
universityPractic/tests/: CMakeLists.txt  test_queue.cpp
